--- a/site/index.html
+++ b/site/index.html
@@ -4,7 +4,7 @@
 	<title>Hello Coursera!</title>
 </head>
 <body>
-<h1>Tis' a great course :P </h1>
+<h1>Tis' a great course! Aint it</h1>
 Hello Coursera!
 </body>
 </html>
